--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -9,7 +8,7 @@
 <meta name='HandheldFriendly' content='True'>
 <meta name='MobileOptimized' content='320'>
 <meta name='format-detection' content='telephone=no'>
-<meta name='viewport' content='width=device-width, minimum-scale=1.0, maximum-scale=1.0'>
+<meta name='viewport' content='width=device-width, minimum-scale=1.0, maximum-scale=1.0,  user-scalable=no'>
 <meta http-equiv='cleartype' content='on'>
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -27,7 +26,7 @@
    
     var hr = new XMLHttpRequest();
    
-    var url = "http://localhost/CurrencyConverter-Ver1.0/home.json";
+    var url = "http://hitlarrajbhandari.com/home.json";
     hr.open("GET", url, true);
     // Set content type header information for sending url encoded variables in the request
     hr.setRequestHeader("Content-type", "application/json", true);
@@ -39,29 +38,29 @@
         //results.innerHTML = data.news2.head +" <br/>Full report: " +data.news2.detail;
       resu.innerHTML = "";
       for(var obj in data){
-         // resu.innerHTML += "<strong>"+"<ul style='list-style-type:none'><li>"+data[obj].ptd+"</strong>" +"</li>"+"</ul>";
-         // $("#ptd").val(data[obj].ptd);
+         resu.innerHTML += "<strong>"+"<ul style='list-style-type:none'><li>"+data[obj].ptd+"</strong>" +"</li>"+"</ul>";
+         $("#ptd").val(data[obj].ptd);
 
-         // resu.innerHTML += "<strong>"+"<ul style='list-style-type:none'><li>"+data[obj].dtp+"</strong>" +"</li>"+"</ul>";
-         // $("#dtp").val(data[obj].dtp);
+         resu.innerHTML += "<strong>"+"<ul style='list-style-type:none'><li>"+data[obj].dtp+"</strong>" +"</li>"+"</ul>";
+         $("#dtp").val(data[obj].dtp);
 
-         // resu.innerHTML += "<strong>"+"<ul style='list-style-type:none'><li>"+data[obj].neptop+"</strong>" +"</li>"+"</ul>";
-         // $("#neptop").val(data[obj].neptop);
+         resu.innerHTML += "<strong>"+"<ul style='list-style-type:none'><li>"+data[obj].neptop+"</strong>" +"</li>"+"</ul>";
+         $("#neptop").val(data[obj].neptop);
 
-         // resu.innerHTML += "<strong>"+"<ul style='list-style-type:none'><li>"+data[obj].ptonep+"</strong>" +"</li>"+"</ul>";
-         // $("#ptonep").val(data[obj].ptonep);
+         resu.innerHTML += "<strong>"+"<ul style='list-style-type:none'><li>"+data[obj].ptonep+"</strong>" +"</li>"+"</ul>";
+         $("#ptonep").val(data[obj].ptonep);
 
-         //  resu.innerHTML += "<strong>"+"<ul style='list-style-type:none'><li>"+data[obj].austop+"</strong>" +"</li>"+"</ul>";
-         // $("#austop").val(data[obj].austop);
+          resu.innerHTML += "<strong>"+"<ul style='list-style-type:none'><li>"+data[obj].austop+"</strong>" +"</li>"+"</ul>";
+         $("#austop").val(data[obj].austop);
 
-          //resu.innerHTML += "<strong>"+"<ul style='list-style-type:none'><li>"+data[obj].ptoaus+"</strong>" +"</li>"+"</ul>";
-         // $("#ptoaus").val(data[obj].ptoaus);
+          resu.innerHTML += "<strong>"+"<ul style='list-style-type:none'><li>"+data[obj].ptoaus+"</strong>" +"</li>"+"</ul>";
+         $("#ptoaus").val(data[obj].ptoaus);
 
-          // resu.innerHTML += "<strong>"+"<ul style='list-style-type:none'><li>"+data[obj].neptoaus+"</strong>" +"</li>"+"</ul>";
-         // $("#neptoaus").val(data[obj].neptoaus);
+          resu.innerHTML += "<strong>"+"<ul style='list-style-type:none'><li>"+data[obj].neptoaus+"</strong>" +"</li>"+"</ul>";
+         $("#neptoaus").val(data[obj].neptoaus);
 
-         // resu.innerHTML += "<strong>"+"<ul style='list-style-type:none'><li>"+data[obj].austonep+"</strong>" +"</li>"+"</ul>";
-        //  $("#austonep").val(data[obj].austonep);
+         resu.innerHTML += "<strong>"+"<ul style='list-style-type:none'><li>"+data[obj].austonep+"</strong>" +"</li>"+"</ul>";
+          $("#austonep").val(data[obj].austonep);
 
             resu.innerHTML += "<strong>"+"<ul style='list-style-type:none'><li>"+data[obj].indtop+"</strong>" +"</li>"+"</ul>";
           $("#indtop").val(data[obj].indtop);
@@ -73,7 +72,7 @@
     }
     // Send the data to PHP now... and wait for response to update the status div
     hr.send(null); // Actually execute the request
-    document.getElementById("resu").innerHTML = "requesting...";
+    document.getElementById("resu").innerHTML = "<img src='loading.gif' />";
 }
   </script>
 
